--- a/reference/자바스크립트+제이쿼리 입문/자바스크립트기원.md
+++ b/reference/자바스크립트+제이쿼리 입문/자바스크립트기원.md
@@ -1,1 +1,3 @@
-자바스크립트는 넷스케이프에서 근무하던 브렌드 아이크가 개발하였다. 먼저는 모카(Mocha)라는 이름으로 개발되었고, 그 후에는 라이브스크립트(LiveScript)로 이름이 변경되었다.
+자바스크립트는 넷스케이프에서 근무하던 브렌드 아이크가 개발하였다. 먼저는 모카(Mocha)라는 이름으로 개발되었고, 그 후에는 라이브스크립트(LiveScript)로 이름이 변경되었다. 넷스케이프는 썬 마이크로 시스템즈(Sun MicroSystems, 현 오라클)와 제휴를 맺게 된다. 참고로, 오라클은 JAVA를 개발한 개발사이다. 제휴를 맺은 후에, 라이브스크립트는 자바스크립트로 이름을 변경하였다. 
+
+이 때에는 수많은 회사에서 각자의 스크립트 언어를 개발하였다. 대표적으로는 마이크로소프트의 JScript이다. 다양한 종류의 스크립트 언어가 등장하게 되어서, 표준화 작업이 이루어지지 않았다. 
